NIFI-13175: - Fixing double scroll bar issues in non tabbed dialogs.

--- a/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/assets/styles/_app.scss
+++ b/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/assets/styles/_app.scss
@@ -73,7 +73,8 @@
         cursor: pointer;
     }
 
-    .dialog-tab-content {
+    .dialog-tab-content,
+    .dialog-content {
         height: 50vh;
     }
 
